app/assets/stylesheets/custom.scss
/* ... */
.block-black , .block-yellow {
  padding-bottom: $line-height*2;
  padding-top: $line-height*2;
}

.block-black {
  background: black;
  padding-left: 0;

  h3, p, a {
    color: white;
  }

  a {
    text-decoration: none;
  }
}

.block-yellow {
  background: $campaign-yellow;
  padding-right: 0;

  h3, p, a {
    color: black;
  }

  a {
    text-decoration: none;
  }
}

.budgets-calendar {
  background: #F9F8F5;
  color: black;

  ul {
    margin-bottom: 0;

    li {
      border-top: 1px solid $campaign-black;
      padding: $line-height/2;

      &:first-child {
        border-top: 0;
      }

      &.active {
        background: $campaign-yellow;
      }

      @include breakpoint(medium) {
        border-left: 1px solid $campaign-black;
        border-top: 0;
        display: inline-block;
        padding: $line-height/2 $line-height;
        width: 24%;

        &:last-child {
          border-right: 0;
        }
      }
    }
  }
}

.previous-budgets {
  border-top: 1px solid $border;
  padding: $line-height*2 0;
}

.type-selection {
  margin-top: $line-height*2;

  .callout {

    a, a h3 {
      color: $text;
      text-decoration: none;

      &:hover {
        border-color: $brand;
        color: $brand;
      }
    }
  }
}

.type-selection-proposal .type-proposal,
.type-selection-investment .type-investment {

  .callout {
    background: $highlight;
    border-color: $brand;
    color: $brand;
    position: relative;

    &:after {
      background: $brand;
      border-radius: rem-calc(40);
      color: white;
      content: "\6c";
      font-family: 'icons';
      font-size: rem-calc(16);
      height: rem-calc(24);
      padding: 0 $line-height/6;
      position: absolute;
      right: -6px;
      top: -6px;
      width: rem-calc(24);
    }
  }
}

// Overrides budgets default colors
// -------------------------------

$budget-custom: #5A6175 !important;

.expanded.budget, .jumbo-budget {

  h1, h2, p, a.back, .icon-angle-left {
    color: $text;
  }

  a {
    color: $link;
    text-decoration: none;
  }

  a.button, &.button {
    background: black;
    color: white;
  }

  &.budget-heading {
    min-height: $line-height*11;
  }

  .info {
    background: $campaign-yellow;

    p {
      color: black;
      margin-bottom: 0;
      text-transform: uppercase;
    }

    @include breakpoint(medium) {
      border-top: rem-calc(6) solid $campaign-yellow;
    }
  }
}

.budget-investment {

  .panel {

    .label-budget-investment, .icon-budget {
      color: $budget-custom;
    }
  }
}

.budget-investment-show {

  .label-budget-investment, .icon-budget {
    color: $budget-custom;
  }
}

.progress-votes {

  .progress {
    background: #212033;
  }

  .progress-meter {
    background: #FDCB10;
  }

  .spent-amount-text:before {
    color: #A5A1FF;
    right: -7px;
  }

  .total-amount {
    color: white;
  }
}

.ballot {

  .subtitle {
    border-left: 2px solid $budget-custom;
  }
}

ul.ballot-list {

  li:hover {
    background: $budget;
    color: $text;

    a, span {
      color: $text;
    }

    .remove-investment-project .icon-x {
      color: $text;
    }
  }
}

.select-district .active a {
  background: $budget;
  color: $text;
}

.dark-heading {

  .button.hollow {
    background: none;
    color: white;
    border: 1px solid white;
    margin-right: $line-height/2;
  }
}

.budget-investment, .budget-investment-show,
.investment-project, .investment-project-show {

  .total-supports {
    color: $budget-custom;
  }

  .supports {

    .button-support {
      background: $budget-custom;
    }

    .budget-investment-amount,
    .investment-project-amount,
    .total-supports {
      color: $budget-custom;
    }

    .remove .icon-check-circle {
      color: $budget-custom;
    }
  }
}

.progress-votes {

  .total-amount, .spent-amount-text {
    color: $budget-custom;
  }
}

// 12. Nvotes
// - - - - - - - - - - - - - - - - - - - - - - - - -

.polls-show {

  ol {
    margin: $line-height 0 $line-height $line-height/2;

    li {
      font-size: $base-font-size;
      margin-bottom: $line-height/2;
    }
  }
}

.poll-question h3 {
  margin-bottom: 0;
}

.booth-container {

  iframe {
    height: 100vh !important;
  }
}

p.can-participate-info {
  background: white;
  font-weight: bold;
  margin-bottom: 0;
  padding: $line-height/2;
  padding-top: $line-height;
}

.nvotes .panel {
  border: 0
}

.nvotes-tablet-sidebar {
  background: white;
}

.nvotes ul.tabs {
  border: 0;
  margin-bottom: 0;

  li {
    border: 1px solid $border;
    margin: $line-height/2 $line-height/2 0;
    position: relative;

    a {
      display: block;
      padding: $line-height/2;
    }

    &:after {
      content: "\63";
      font-family: 'icons';
      right: 12px;
      position: absolute;
      top: 12px;
    }

    &.is-active {
      background: $info-bg;

      &:after {
        color: $brand;
        content: "\61";
      }

      a {
        border: 0;
      }
    }

    &:not(.is-active) a {
      color: $text;
    }
  }
}

.auth-form p, .auth-form p a {
  font-size: $base-font-size;
}

.has_voted {
  @extend .warning;
}

.ok {
  @extend .success;
}

.census_failed {
  @extend .alert;
}

.no_postal_code {
  @extend .primary;
}

.verify-name h3 span {
  text-transform: uppercase;
}

// 13. Kit Decide
// - - - - - - - - - - - - - - - - - - - - - - - - -

.kit-decide {

  h3 {
    color: black;
    font-family: 'Franklin Gothic' !important;
  }

  img {
    border: 1px solid $border;
    box-shadow: 2px 2px 2px #ccc;
  }
}
/* ... */

